# chat

./: .env  Cargo.toml
chat-server/: Cargo.toml
chat-server/src/: error.rs  lib.rs  main.rs
chat-server/src/handlers/: auth.rs  chat.rs  mod.rs
chat-server/src/models/: user.rs
migrations/: 20240721060940_initial.sql
notify-server/: Cargo.toml
src/: config.rs  lib.rs  main.rs
src/handlers/: messages.rs
