[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "multipart", "query", "tracing"] }
serde_yaml = "0.9.34"
sqlx = "0.7.4"
thiserror = "1.0.62"
tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.204", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
log = "0.4.22"
